# ddsp_max_msp

./: README.md  ReadMe.md
docs/: me.ddsp~.maxref.xml  me.hello-world.maxref.xml
help/: me.ddsp~.maxhelp  me.granolar~.maxhelp  me.hello-world.maxhelp
source/projects/me.ddsp_tilde/: CMakeLists.txt  ddsp_model.cpp  ddsp_model.hpp  me.ddsp_tilde.cpp
source/projects/me.granolar_tilde/: me.granolar_tilde.cpp  me.granolar_tilde_test.cpp
source/projects/me.hello-world/: me.hello-world_test.cpp
